// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/nvm/extract extractPackageFile() returns a result 1`] = `
Array [
  Object {
    "currentValue": "8.4.0",
    "datasource": "github-tags",
    "depName": "node",
    "lookupName": "nodejs/node",
  },
]
`;

exports[`manager/nvm/extract extractPackageFile() skips non ranges 1`] = `
Array [
  Object {
    "currentValue": "latestn",
    "datasource": "github-tags",
    "depName": "node",
    "lookupName": "nodejs/node",
  },
]
`;

exports[`manager/nvm/extract extractPackageFile() supports ranges 1`] = `
Array [
  Object {
    "currentValue": "8.4",
    "datasource": "github-tags",
    "depName": "node",
    "lookupName": "nodejs/node",
  },
]
`;
